@@ -12,7 +12,7 @@ stock_payment_category_strict_membership_uid | category/category_uid/z_related_s
 stock_resource_category_strict_membership_uid | category/category_uid/z_related_strict_membership_resource_uid_from_stock
 translated_portal_type | translation/translated_message/z_related_translated_portal_type
 translated_simulation_state | translation/translated_message/z_related_translated_simulation_state
-translated_simulation_state_title | translation/translated_message/z_related_translated_simulation_state_title
+translated_simulation_state_title__ | translation/translated_message/z_related_translated_simulation_state_title
 translated_opportunity_state | translation/translated_message/z_related_translated_opportunity_state
 translated_opportunity_state_title | translation/translated_message/z_related_translated_opportunity_state_title
 career_skill_id | category,catalog,catalog/id/z_related_career_skill
