@@ -2,3 +2,4 @@ quick_search_text | SQLCatalog_makeQuickSearchQuery
 advanced_search_text | SQLCatalog_makeQuickSearchQuery
 full_text | SQLCatalog_makeFullTextQuery
 search_text | SQLCatalog_makeSearchTextQuery
+translated_simulation_state_title | SQLCatalog_makeTranslatedSimulationStateTitleSearchQuery
